changes for snapshot endpoint for booking